--- a/openag-config.json
+++ b/openag-config.json
@@ -1,10 +1,13 @@
 {
-  "root_url": "",
-
-  "api_url": "{{root_url}}/_openag/api/0.0.1",
-  "origin_url": "{{root_url}}",
+  "root_url": "http://98.202.80.100",
+  "origin_url": "{{root_url}}:5984",
+  "api_url": "{{origin_url}}/_openag/api/0.0.1",
   "start_recipe_url": "{{api_url}}/service/environments/{{environment}}/start_recipe",
   "stop_recipe_url": "{{api_url}}/service/environments/{{environment}}/stop_recipe",
+
+  "demo": {
+    "image_url": "{{root_url}}/img.jpg"
+  },
 
   "environmental_data_point": {
     "local": "environmental_data_point",
@@ -34,7 +37,7 @@
   "app": {
     "local": "openag",
     "state_id": "state",
-    "default_state": "chart",
+    "default_state": "dashboard",
     "show_nav": true,
     "show_dashboard": true,
     "show_chart": true,
