Refresh the img every 30s

--- a/openag-config.json
+++ b/openag-config.json
@@ -6,7 +6,7 @@
   "stop_recipe_url": "{{api_url}}/service/environments/{{environment}}/stop_recipe",
 
   "demo": {
-    "image_url": "{{root_url}}/img.jpg"
+    "image_url": "{{root_url}}/img.jpg?timestamp={{timestamp}}"
   },
 
   "environmental_data_point": {
