--- a/openag-config.json
+++ b/openag-config.json
@@ -22,7 +22,8 @@
 
   "recipes": {
     "local": "recipes",
-    "origin": "{{origin_url}}/recipes"
+    "origin": "{{origin_url}}/recipes",
+    "all_docs": "{{origin_url}}/recipes/_all_docs?include_docs=true"
   },
 
   "environments": {
